# newton-engine

./: .gitignore  CMakeLists.txt  README.md
include/: NewtonEngine.hpp
include/Ballistic/: ballistic.hpp
include/Core/Math/: Vector2.hpp  Vector2D.hpp
include/Physics/Dynamics/: Particle.hpp
include/Physics/Forces/: IParticleForceGenerator.hpp  ParticleAnchoredSpring.hpp  ParticleDrag.hpp  ParticleForceRegistry.hpp  ParticleGravity.hpp  ParticleSpring.hpp
include/Physics/Integration/: EulerIntegrator.hpp  IIntegrator.hpp
src/: CMakeLists.txt  NewtonEngine.hpp
src/Core/Math/: Vector2.cpp  Vector2D.cpp
src/Physics/Dynamics/: Particle.cpp
src/Physics/Forces/: ParticleAnchoredSpring.cpp  ParticleDrag.cpp  ParticleForceRegistry.cpp  ParticleGravity.cpp  ParticleSpring.cpp
src/Physics/Integration/: EulerIntegrator.cpp
tests/: CMakeLists.txt
tests/CoreTests/MathTests/: VectorTests.cpp
tests/CoreTests/PhysicsTests/: ParticleTests.cpp
tests/CoreTests/PhysicsTests/IntegratorTests/: EulerIntegratorTests.cpp
tests/PhysicsTests/: ParticleTests.cpp
tests/PhysicsTests/IntegratorTests/: EulerIntegratorTests.cpp
